CheckIn:Fix bugzilla bug 147403 [regression][Linux-ws]Preview attached script report throws error.